Se elimino la estructura de el archivo index.html, para crearla dinámicamente con React.js

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,19 @@
   <title>Horus</title>
   <link rel="stylesheet" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-  <section class="contenido">
-    <section class="usuarios">
+  <section id="contenido">
 
+  </section>
+  <!--
+  <section class="vista">
+    <section class="usuarios">
     </section>
-    <section class="calendario">
+    <section id="calendario" class="calendario">
       <article class="calendario__dia">
         <div class="calendario__label">Lunes</div>
         <div class="calendario__bloque">
@@ -28,67 +34,9 @@
         <div class="calendario__bloque">
         </div>
       </article>
-      <article class="calendario__dia">
-        <div class="calendario__label">Martes</div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-      </article>
-      <article class="calendario__dia">
-        <div class="calendario__label">Miércoles</div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-      </article>
-      <article class="calendario__dia">
-        <div class="calendario__label">Jueves</div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-      </article>
-      <article class="calendario__dia">
-        <div class="calendario__label">Viernes</div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-      </article>
     </section>
   </section>
+  -->
+  <script type="text/jsx" src="javascripts/view.js"></script>
 </body>
 </html>
