Se agregaron los componentes de las vistas, por separado.

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,11 @@
     </section>
   </section>
   -->
+  <script type="text/jsx" src="javascripts/usuarios.js"></script>
+  <script type="text/jsx" src="javascripts/calendarioLabel.js"></script>
+  <script type="text/jsx" src="javascripts/calendarioBloque.js"></script>
+  <script type="text/jsx" src="javascripts/calendarioDia.js"></script>
+  <script type="text/jsx" src="javascripts/calendario.js"></script>
   <script type="text/jsx" src="javascripts/view.js"></script>
 </body>
 </html>
