--- a/public/index.html
+++ b/public/index.html
@@ -7,42 +7,12 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
   <section id="contenido">
 
   </section>
-  <!--
-  <section class="vista">
-    <section class="usuarios">
-    </section>
-    <section id="calendario" class="calendario">
-      <article class="calendario__dia">
-        <div class="calendario__label">Lunes</div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-        <div class="calendario__bloque">
-        </div>
-      </article>
-    </section>
-  </section>
-  -->
-  <script type="text/jsx" src="javascripts/usuarios.js"></script>
-  <script type="text/jsx" src="javascripts/calendarioLabel.js"></script>
-  <script type="text/jsx" src="javascripts/calendarioBloque.js"></script>
-  <script type="text/jsx" src="javascripts/calendarioDia.js"></script>
-  <script type="text/jsx" src="javascripts/calendario.js"></script>
-  <script type="text/jsx" src="javascripts/view.js"></script>
+  
+  <script src="javascripts/build.js"></script>
 </body>
 </html>
