--- a/app/public/adduser.html
+++ b/app/public/adduser.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <form action="user/add" method="post">
+            <input type="text" name="username" placeholder="username"> </input>
+            <input type="password" name="password" placeholder="password"> </input>
             <input type="text" name="name" placeholder="Name"> </input>
             <input type="text" name="lastname" placeholder="Lastname"> </input>
             <input type="text" name="mail" placeholder="Email"> </input>
